<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
<!-- if you want to add icon use this android:icon="@drawable/ic_favorite_black_48dp"-->




    <item
        android:id="@+id/action_main"
        android:title="@string/action_goto_main"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_login"
        android:title="@string/action_login"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <!--<item-->
        <!--android:id="@+id/action_Profile"-->
        <!--android:title="My Profile"-->
        <!--app:showAsAction="ifRoom"/>-->

    <item
        android:id="@+id/action_create_new"
        android:title="Create A Story"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_profile_view"
        android:title="Profile"
        app:showAsAction="ifRoom"/>




    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/action_settings"
        android:title="About the App"
        app:showAsAction="ifRoom"/>



</menu>