...
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Welcome to the Storyboard" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="417dp"
...
