...
            android:hint="Bio"
            android:maxLength="70"
            android:textAlignment="center"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/editText4"
            android:layout_below="@+id/editText4"
            android:layout_marginTop="15dp"
            android:ems="10"
...
