package com.alttab.vcu.storyboard;


import android.support.test.espresso.ViewInteraction;
import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;
import android.test.suitebuilder.annotation.LargeTest;

import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static android.support.test.InstrumentationRegistry.getInstrumentation;
import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.Espresso.openActionBarOverflowOrOptionsMenu;
import static android.support.test.espresso.Espresso.pressBack;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.action.ViewActions.closeSoftKeyboard;
import static android.support.test.espresso.action.ViewActions.replaceText;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class DidntWriteAnyText {

    @Rule
    public ActivityTestRule<MainActivity> myActivityTestRule = new ActivityTestRule<>(MainActivity.class);

    @Test
    public void didnt_write_any_text() {
        // Added a sleep statement to match the app's execution delay.
        // The recommended way to handle such scenarios is to use Espresso idling resources:
        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
        try {
            Thread.sleep(6000);
        } catch (InterruptedException err) {
            err.printStackTrace();
        }

        openActionBarOverflowOrOptionsMenu(getInstrumentation().getTargetContext());

        ViewInteraction appCompatTextView = onView(
                allOf(withId(R.id.title), withText("Create A Story"),
                        isDisplayed()));
        appCompatTextView.perform(click());

        // Added a sleep statement to match the app's execution delay.
        // The recommended way to handle such scenarios is to use Espresso idling resources:
        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
        try {
            Thread.sleep(6000);
        } catch (InterruptedException exP) {
            exP.printStackTrace();
        }

        //        ViewInteraction appCompatButton2 = onView(
        //                allOf(withId(R.id.submitbutton), withText("Submit"), isDisplayed()));
        //        appCompatButton2.perform(click());

        // Added a sleep statement to match the app's execution delay.
        // The recommended way to handle such scenarios is to use Espresso idling resources:
        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
        try {
            Thread.sleep(5000);
        } catch (InterruptedException exP) {
            exP.printStackTrace();
        }

        //        ViewInteraction appCompatButton3 = onView(
        //                allOf(withId(R.id.submitbutton), withText("Submit"), isDisplayed()));
        //         appCompatButton3.perform(click());

        //        ViewInteraction appCompatEditText = onView(
        //                allOf(withId(R.id.editText5), isDisplayed()));
        //        appCompatEditText.perform(click());

        //        ViewInteraction appCompatEditText2 = onView(
        //                allOf(withId(R.id.editText5), isDisplayed()));
        //        appCompatEditText2.perform(replaceText("I love CMSC 355"), closeSoftKeyboard());

        //        pressBack();

        ViewInteraction appCompatButton4 = onView(
                allOf(withId(R.id.submitbutton), withText("Submit"), isDisplayed()));
        appCompatButton4.perform(click());

    }

}
